# aws-inventory-sdk

./: Cargo.toml  README.md  build.sh
src/: GEMINI.md  config.rs  db.rs  export.rs  identify.rs  inventory.rs  lib.rs  main.rs  query.rs  server.rs
tests/: cli.rs
