[package]
name = "aws-inventory-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.8.5"
aws-sdk-ec2 = "1.159.0"
aws-sdk-elasticloadbalancingv2 = "1.91.0"
aws-sdk-eks = "1.102.0"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.81"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
anyhow = "1.0"
thiserror = "1.0"
kube = "0.87.2"
k8s-openapi = { version = "0.20.0", features = ["v1_27"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled", "serde_json"] }
axum = "0.7.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1.0"
mockito = "1.4.0"